feat: add register page

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -5,6 +5,8 @@
   --color-bg-secondary: #e8eef1;
   --color-text: #001a41;
   --color-button: #ed0226;
+  --color-input-background: #f3f3f3;
+  --color-input-border: #eaeaea;
 }
 
 @mixin dark-theme {
