--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,10 @@
   --color-bg: #fff;
   --color-bg-secondary: #e8eef1;
   --color-text: #001a41;
+  --color-text-primary: #000000;
+  --color-text-secondary: #b1b1b1;
   --color-button: #ed0226;
+  --color-button-text:#ffffff;
   --color-input-background: #f3f3f3;
   --color-input-border: #eaeaea;
 }
