--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,9 +6,12 @@
   --color-text: #001a41;
   --color-text-primary: #000000;
   --color-text-secondary: #b1b1b1;
+  --color-text-third: #6c6c6c;
+  --color-text-fourth: #ffffff;
   --color-button: #ed0226;
-  --color-button-text:#ffffff;
+  --color-button-text: #ffffff;
   --color-input-background: #f3f3f3;
+  --color-input-background-secondary: #ffffff;
   --color-input-border: #eaeaea;
 }
 
