--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,6 @@
 $font-poppins: 'Poppins', sans-serif;
 
+$font-weight-thin: 100;
 $font-weight-extra-light: 200;
 $font-weight-light: 300;
 $font-weight-regular: 400;
@@ -7,7 +8,7 @@ $font-weight-medium: 500;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 $font-weight-extra-bold: 800;
-$font-weight-black:900;
+$font-weight-black: 900;
 
 @mixin font($size, $weight, $color) {
   font-family: $font-poppins !important;
