--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -1,50 +1,11 @@
 @import '@styles/base';
 
 .container {
-  min-width: 100vw;
-  padding: 0 !important;
+  max-width: 100% !important;
 
   h5 {
     margin: 2rem 0 0 3rem;
     @include font(36px, $font-weight-black, var(--color-text-primary));
-  }
-
-  .header_container {
-    @include directionY;
-    justify-content: center;
-    background-image: url('../../asset/header-background.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
-    position: relative;
-    z-index: -1;
-    left: 0;
-    padding-left: 3rem;
-
-    h4 {
-      @include font(64px, $font-weight-thin, var(--color-text-fourth));
-      font-style: italic;
-      width: 30%;
-    }
-
-    p {
-      @include font(24px, $font-weight-thin, var(--color-text-fourth));
-      font-style: italic;
-      width: 40%;
-      margin-top: 0.5rem;
-    }
-
-    .header_backdrop {
-      height: 500px;
-      width: 100%;
-      background-color: #000000;
-      opacity: 25%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
   }
 
   .input_container {
@@ -70,46 +31,5 @@
     margin-top: 2rem;
     position: relative;
     z-index: -1;
-
-    .grid_item {
-      border-radius: 10px;
-      background-color: var(--color-bg);
-      height: 400px;
-      position: relative;
-      max-width: 22%;
-      margin: 0 1rem;
-
-      .grid_img {
-        border-radius: 10px;
-        width: 100%;
-        height: 45%;
-        background-color: gray;
-      }
-
-      .bookmark_icon {
-        position: absolute;
-        top: 0;
-        right: 0;
-        margin: 0.5rem;
-      }
-
-      .detail_wrapper {
-        padding: 1rem;
-
-        .grid_title {
-          @include font(16px, $font-weight-black, var(--color-text-primary));
-        }
-
-        .grid_date {
-          margin-top: 0.2rem;
-          @include font(14px, $font-weight-regular, var(--color-text-secondary));
-        }
-
-        .grid_description {
-          margin-top: 0.8rem;
-          @include font(16px, $font-weight-regular, var(--color-text-third));
-        }
-      }
-    }
   }
 }
