feat: add bookmark page

--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -5,8 +5,8 @@
   background-color: var(--color-bg);
   height: 400px;
   position: relative;
-  max-width: 22%;
-  margin: 0 1rem;
+  max-width: 22% !important;
+  margin: 0 1rem !important;
 
   .grid_img {
     border-radius: 10px;
