--- a/src/pages/Create/style.module.scss
+++ b/src/pages/Create/style.module.scss
@@ -1,1 +1,60 @@
-@import "../../styles/base.scss";
+@import '../../styles/base.scss';
+
+.container {
+  max-width: 100% !important;
+
+  h5 {
+    margin: 2rem 0 0 3rem;
+    @include font(36px, $font-weight-black, var(--color-text-primary));
+  }
+
+  .file_input_wrapper {
+    @include directionX;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 5rem;
+    height: 300px;
+    background-color: var(--color-bg);
+    border-radius: 10px;
+
+    button {
+      padding: 0.2rem 2rem;
+      text-transform: capitalize;
+      @include font(16px, $font-weight-extra-bold, var(--color-button-text));
+    }
+  }
+
+  .input_container {
+    margin: 1rem 5rem;
+
+    .input_wrapper {
+      margin: 1.5rem 0rem;
+      height: 100%;
+
+      p {
+        @include font(20px, $font-weight-extra-bold, var(--color-text-primary));
+        margin-bottom: 0.5rem;
+      }
+
+      .input_description {
+        height: 100px;
+        max-height: 100pxq;
+      }
+    }
+  }
+
+  .button_container {
+    @include directionX;
+    margin: 5rem 5rem 1rem;
+
+    button {
+      text-transform: capitalize;
+      margin-left: auto;
+      padding: 0.1rem 2rem;
+    }
+  }
+
+  .input {
+    display: none;
+  }
+}
