feat: implement get post detail with redux saga

--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -7,6 +7,7 @@
   position: relative;
   max-width: 22% !important;
   margin: 0 1rem !important;
+  cursor: pointer;
 
   .grid_img {
     border-radius: 10px;
