--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -8,6 +8,7 @@
   --color-text-secondary: #b1b1b1;
   --color-text-third: #6c6c6c;
   --color-text-fourth: #ffffff;
+  --color-text-fifth: #3b97d3;
   --color-button: #ed0226;
   --color-button-text: #ffffff;
   --color-input-background: #f3f3f3;
