--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -145,3 +145,19 @@
     font-size: 0.8rem;
   }
 }
+
+.dropdown {
+  @include directionX;
+
+  .menu_icon {
+    margin-left: auto;
+    width: 20px;
+    height: 20px;
+    margin-right: 1rem;
+  }
+
+  .menu_list {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-size: 0.8rem;
+  }
+}
