--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -16,10 +16,17 @@
   }
 
   .bookmark_icon {
+    border-radius: 50%;
     position: absolute;
     top: 0;
     right: 0;
     margin: 0.5rem;
+    background-color: #ffffff;
+  }
+
+  .bookmark_icon_active {
+    @extend .bookmark_icon;
+    background-color: #ffff00;
   }
 
   .detail_wrapper {
