--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -26,6 +26,9 @@
 
   .grid_container {
     @include directionX;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 40px;
     justify-content: center;
     min-width: 100%;
     margin-top: 2rem;
