--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -27,10 +27,23 @@
   .grid_container {
     @include directionX;
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
     gap: 40px;
     justify-content: center;
     min-width: 100%;
     margin-top: 2rem;
+
+    @include apply-at-md-size {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    @include apply-at-lg-size {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
+
+    @include apply-at-xl-size {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
   }
 }
